Correct composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "neovav\\Text",
+  "name": "neovav/text",
   "description": "A PHP lib for text",
   "keywords": ["text", "strings", "php", "neovav"],
   "homepage": "https://github.com/neovav/Text",
